# template-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  eval.sh  setup.sh
.github/workflows/: workflow_example.yml
MyApp/: CMakeLists.txt
MyApp/backend/: CMakeLists.txt
MyApp/backend/src/: main.cpp
MyApp/proto/: proto_example.proto
